# banappeals

./: .gitignore  Dockerfile  README.md  config.example.yml  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  server.py
banappeals/: __init__.py  database.py  modals.py
banappeals/blueprints/: api.py  auth.py  discord.py  filters.py  utils.py  views.py
banappeals/static/css/: style.css
banappeals/templates/: admin.htm  footer.htm  header.htm  index.htm  overview.htm  review.htm  status.htm
